Table header alignment. Correct check if pane is already available.

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -21,6 +21,10 @@ table {
         }
     }
 
+    th {
+        text-align: left;
+    }
+
     &.clickable {
         tbody {
             tr {
